--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -75,7 +75,7 @@
 }
 
 .lastSection {
-  margin-bottom: 100px;
+  margin-bottom: 24px;
 }
 
 .sectionHeader {
